# lambda

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
lambda/: agent.py  config.py  main.py  tools.py
lambda_agent/: agent.py  cli_setup.py  config.py  context.py  main.py  scratchpad.py  spinner.py  subagent.py  todo.py  tools.py
