[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda-agent"
version = "0.1.0"
description = "Lambda - A minimal AI coding agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ayush Ranjan"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "google-genai>=1.71.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/ayusrjn/lambda"
Repository = "https://github.com/ayusrjn/lambda.git"

[project.scripts]
lambda = "lambda_agent.main:main"

[tool.setuptools.packages.find]
include = ["lambda_agent*"]
